change searchbar icon

--- a/API/client/src/Components/App.css
+++ b/API/client/src/Components/App.css
@@ -123,6 +123,14 @@ button {
 	width: 45px;
 }
 
+#at-icon {
+	display: none;
+}
+
+.search > .fa-at {
+	padding-left: 20px;
+}
+
 #search-input {
 	padding-left: 40px;
 }
