--- a/API/client/src/Components/App.css
+++ b/API/client/src/Components/App.css
@@ -155,3 +155,14 @@ button {
 .hide {
 	display: none;
 }
+
+.card-text {
+	padding-left: .5rem;
+	padding-right: .5rem;
+}
+
+.media-image {
+	width: 35rem;
+	border-radius: 1.5rem;
+	padding-bottom: 16px;
+}
